--- a/BoseProductPage.html
+++ b/BoseProductPage.html
@@ -6,7 +6,7 @@
 <body style="background-color: #f8f6f1;"></body>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Galaxy Watch</title>
+<title>Bose QuietComfort</title>
 <!-- Add Bootstrap CSS link here -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -63,13 +63,13 @@
         <div id="productCarousel" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/SamsungImage1.jpg" class="d-block w-100 product-picture" alt="PlayStation Image">
+              <img src="images/BoseImage1.jpg" class="d-block w-100 product-picture" alt="PlayStation Image">
             </div>
             <div class="carousel-item">
-              <img src="images/SamsungImage2.jpg" class="d-block w-100" alt="Xbox Image">
+              <img src="images/BoseImage2.jpg" class="d-block w-100" alt="Xbox Image">
             </div>
             <div class="carousel-item">
-              <img src="images/SamsungImage3.jpg" class="d-block w-100" alt="Switch Image">
+              <img src="images/BoseImage3.jpeg" class="d-block w-100" alt="Switch Image">
             </div>
           </div>
           <a class="carousel-control-prev" href="#productCarousel" role="button" data-bs-slide="prev">
@@ -88,10 +88,10 @@
         <div class="row d-flex align-items-evenly ">
 
           <div>
-            <h1 class="product-name">Samsung Galaxy Watch</h1>
-            <p class="h4 product-price">Price: $299.99</p>
-            <p class="h4">Elder Rating: 4.7 stars</p>
-            <p class="">Meet the stylish smartwatch that’s packed with the latest innovation, plus the return of a rotating bezel for more functionality and style. Start your everyday wellness journey with personalized heart rate zone workouts² and insights for better rest with Advanced Sleep Coaching.</p>
+            <h1 class="product-name">Bose QuietComfort</h1>
+            <p class="h4 product-price">Price: $399.99</p>
+            <p class="h4">Elder Rating: 5.0 stars</p>
+            <p class="">World-class noise cancellation, quieter than ever before. Breakthrough spatialized audio for immersive listening, no matter the content or source. Elevated design and luxe materials for unrivaled comfort. It’s everything music makes you feel taken to new highs. Bose Immersive Audio pushes the boundary of what it means to listen by taking what you’re hearing out of your head and placing it in front of you.</p>
           </div>
 
           <div class="pt-5 buying-buttons">
@@ -115,9 +115,9 @@
               Select Products
             </button>
             <ul class="dropdown-menu" id="productsDropdownContent" onchange="updateTable()">
-              <li><label class="dropdown-item"><input type="checkbox" value="Samsung">Samsung</label></li>
-              <li><label class="dropdown-item"><input type="checkbox" value="Apple">Apple</label></li>
-              <li><label class="dropdown-item"><input type="checkbox" value="Fitbit">Fitbit</label></li>
+              <li><label class="dropdown-item"><input type="checkbox" value="Airpods">Airpods</label></li>
+              <li><label class="dropdown-item"><input type="checkbox" value="Bose">Bose</label></li>
+              <li><label class="dropdown-item"><input type="checkbox" value="Beats">Beats</label></li>
   
             </ul>
           </div>
