--- a/searchResultsHeadphones.html
+++ b/searchResultsHeadphones.html
@@ -111,107 +111,107 @@
         
         <div id="carouselExampleControls" class="carousel slide justify-content-center">
             <div class="carousel-inner text-center">
-                <div class="carousel-item ">
-
-                    <div class="card d-block mx-auto" style="width: 48rem;">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <a href="AppleProductPage.html">
-                                    <img src="images/AppleImage1.jpg" class="card-img-top border-end p-3" alt="...">
-
-                                </a>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="card-body text-s">
-                                    <h3 class="card-title">Apple Watch</h3>
-                                    <div class="text-start">
-                                        <p class="card-text"><strong>$399.99</strong></p>
-                                        <p class="card-text">
-                                            Apple Watch is the ultimate device for a healthy life.
-                                        </p>
-                                        <hr class="" />
-                                        <p class="text-start">Features</p>
-                                        <ul>
-                                            <li>Heartbeat monitor</li>
-                                            <li>Smarter. Brighter. Mightier.</li>
-                                        </ul>
-                                        <hr class="" />
-
-                                    </div>
-                                    <a href="AppleProductPage.html" class="btn btn-outline-primary btn-lg">Learn More</a>
-
-
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="carousel-item ">
-
-                    <div class="card d-block mx-auto" style="width: 48rem;">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <a href="SamsungProductPage.html">
-                                    <img src="images/SamsungImage1.jpg" class="card-img-top border-end p-3" alt="...">
-
-                                </a>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="card-body text-s">
-                                    <h3 class="card-title">Samsung Galaxy Watch</h3>
-                                    <div class="text-start">
-                                        <p class="card-text"><strong>$299.99</strong></p>
-                                        <p class="card-text">
-                                            Start Your Everyday Wellness Journey Today.
-                                        </p>
-                                        <hr class="" />
-                                        <p class="text-start">Features</p>
-                                        <ul>
-                                            <li>Fitness Tracking</li>
-                                            <li>Sleep Coaching</li>
-                                        </ul>
-                                        <hr class="" />
-
-                                    </div>
-                                    <a href="SamsungProductPage.html" class="btn btn-outline-primary btn-lg">Learn More</a>
-
-
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="carousel-item active">
 
                     <div class="card d-block mx-auto" style="width: 48rem;">
                         <div class="row">
                             <div class="col-md-6">
-                                <a href="FitbitProductPage.html">
-                                    <img src="images/FitbitImage1.jpg" class="card-img-top border-end p-3" alt="...">
+                                <a href="AirpodProductPage.html">
+                                    <img src="images/AirpodsImage1.jpg" class="card-img-top border-end p-3" alt="...">
 
                                 </a>
                             </div>
                             <div class="col-md-6">
                                 <div class="card-body text-s">
-                                    <h3 class="card-title">Fitbit Watch</h3>
+                                    <h3 class="card-title">Apple Airpods Max</h3>
                                     <div class="text-start">
-                                        <p class="card-text"><strong>$199.99</strong></p>
+                                        <p class="card-text"><strong>$499.99</strong></p>
                                         <p class="card-text">
-                                            Upgrade Your Moves, Upgrade Your Wrist!
+                                            The ultimate personal listening experience is here.
                                         </p>
                                         <hr class="" />
                                         <p class="text-start">Features</p>
                                         <ul>
-                                            <li>Alexa Built-in</li>
-                                            <li>Swim Tracking</li>
+                                            <li>Active Noise Cancelling</li>
+                                            <li>Personalized Spatial Audio</li>
                                         </ul>
                                         <hr class="" />
 
                                     </div>
-                                    <a href="FitbitProductPage.html" class="btn btn-outline-primary btn-lg">Learn More</a>
+                                    <a href="AirpodProductPage.html" class="btn btn-outline-primary btn-lg">Learn More</a>
+
+
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item ">
+
+                    <div class="card d-block mx-auto" style="width: 48rem;">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <a href="BeatsProductPage.html">
+                                    <img src="images/BeatsImage1.jpg" class="card-img-top border-end p-3" alt="...">
+
+                                </a>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="card-body text-s">
+                                    <h3 class="card-title">Beats Studio3</h3>
+                                    <div class="text-start">
+                                        <p class="card-text"><strong>$249.99</strong></p>
+                                        <p class="card-text">
+                                            Premium sound and spatial audio with up to 40 hours of battery life.
+                                        </p>
+                                        <hr class="" />
+                                        <p class="text-start">Features</p>
+                                        <ul>
+                                            <li>Active Noise Cancelling</li>
+                                            <li>Apple W1 Chip</li>
+                                        </ul>
+                                        <hr class="" />
+
+                                    </div>
+                                    <a href="BeatsProductPage.html" class="btn btn-outline-primary btn-lg">Learn More</a>
+
+
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item ">
+
+                    <div class="card d-block mx-auto" style="width: 48rem;">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <a href="BoseProductPage.html">
+                                    <img src="images/BoseImage1.jpg" class="card-img-top border-end p-3" alt="...">
+
+                                </a>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="card-body text-s">
+                                    <h3 class="card-title">Bose QuietComfort</h3>
+                                    <div class="text-start">
+                                        <p class="card-text"><strong>$399.99</strong></p>
+                                        <p class="card-text">
+                                            Take charge of your music and stride along to the beat.
+                                        </p>
+                                        <hr class="" />
+                                        <p class="text-start">Features</p>
+                                        <ul>
+                                            <li>High-Fidelity Audio</li>
+                                            <li>Legendary Noise Cancelling</li>
+                                        </ul>
+                                        <hr class="" />
+
+                                    </div>
+                                    <a href="BoseProductPage.html" class="btn btn-outline-primary btn-lg">Learn More</a>
 
 
                                     </ul>
