--- a/FitbitProductPage.html
+++ b/FitbitProductPage.html
@@ -6,7 +6,7 @@
 <body style="background-color: #f8f6f1;"></body>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Xbox</title>
+<title>Fitbit Watch</title>
 <!-- Add Bootstrap CSS link here -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
