--- a/searchResultsWatches3.html
+++ b/searchResultsWatches3.html
@@ -111,7 +111,7 @@
         
         <div id="carouselExampleControls" class="carousel slide justify-content-center">
             <div class="carousel-inner text-center">
-                <div class="carousel-item active">
+                <div class="carousel-item ">
 
                     <div class="card d-block mx-auto" style="width: 48rem;">
                         <div class="row">
