Add improvement to cart items

--- a/PlayStationProductPage.html
+++ b/PlayStationProductPage.html
@@ -99,7 +99,7 @@
           </div>
 
           <div class="pt-5 buying-buttons">
-            <a target="_blank" class="btn btn-warning btn-lg mt-4">Add To Cart</a>
+            <a target="_self" class="btn btn-warning btn-lg mt-4">Add To Cart</a>
             <a href="checkout.html" class="btn btn-success btn-lg mt-4">Buy Now</a>
           </div>
 
