--- a/cart.html
+++ b/cart.html
@@ -90,18 +90,14 @@
 
             <div class="col d-flex">
               <div class="d-flex flex-row">
-                <p class="mb-0 font-weight-bold pe-2"><strong>-</strong></p>
-                <p class="mb-0 font-weight-bold ">Quantity: 1</p>
-                <p class="mb-0 ps-2"><strong>+</strong></p>
+                <a class="mb-0 font-weight-bold cart-minus pe-2" href="" onclick="decreaseItem();"><strong>-</strong></a>
+                <p class="mb-0  ">Quantity: 1</p>
+                <p class="mb-0 font-weight-bold ps-2"><strong>+</strong></p>
               </div>
             </div>
-
-            
-            
             <div class="col d-flex justify-content-end">
               <div class="col cart-price">Price: $399.99</div>
               <a class="delete-item " onclick="return deleteItem()">X</a>
-
             </div>
           </div>
         </div>
