--- a/cart.html
+++ b/cart.html
@@ -90,9 +90,9 @@
 
             <div class="col d-flex">
               <div class="d-flex flex-row">
-                <a class="mb-0 font-weight-bold cart-minus pe-2" href="" onclick="decreaseItem();"><strong>-</strong></a>
-                <p class="mb-0  ">Quantity: 1</p>
-                <p class="mb-0 font-weight-bold cart-plus ps-2"><strong>+</strong></p>
+                <a class="mb-0 font-weight-bold cart-minus pe-2" href="#" onclick="decreaseItem();"><strong>-</strong></a>
+                <p class="mb-0" id="cart-quantity">Quantity: 1</p>
+                <p class="mb-0 font-weight-bold cart-plus ps-2" href="#" onclick="increaseItem();"><strong>+</strong></p>
               </div>
             </div>
             <div class="col d-flex justify-content-end">
