Fix quantity for new items in cart

--- a/cart.html
+++ b/cart.html
@@ -92,7 +92,7 @@
               <div class="d-flex flex-row">
                 <a class="mb-0 font-weight-bold cart-minus pe-2" href="#" onclick="decreaseItem(this);"><strong>-</strong></a>
                 <p class="mb-0" id="cart-quantity">Quantity: 1</p>
-                <p class="mb-0 font-weight-bold cart-plus ps-2" href="#" onclick="increaseItem();"><strong>+</strong></p>
+                <p class="mb-0 font-weight-bold cart-plus ps-2" href="#" onclick="increaseItem(this);"><strong>+</strong></p>
               </div>
             </div>
             <div class="col d-flex justify-content-end">
