Create not found page and add banners to product pages for comparison instructions

--- a/AirpodProductPage.html
+++ b/AirpodProductPage.html
@@ -104,7 +104,11 @@
   </div>
 
   <div class="h3 text-center py-4">Compare with Similar Products</div>
-
+  
+  <div class="container">
+    <h5 class="alert alert-primary text-center ">Choose at least 1 product and 1 feature to create a table. </h5>
+  </div>
+  
   <div class="container">
     <div class="col ">
       <div class="col d-flex justify-content-between">
