--- a/XboxProductPage.html
+++ b/XboxProductPage.html
@@ -92,7 +92,7 @@
             <p class="h4 product-price">Price: $499.99</p>
             <p class="h4">Elder Rating: 4.9 stars</p>
             <p class="">With thousands of current favorites, new releases, and time-honored titles available, the Xbox
-              brings a library that’s ready for fun as soon as you open the box.</p>
+              brings a library that’s ready for fun as soon as you open the box. Make sure to get your brand new Xbox for endless fun!</p>
           </div>
 
           <div class="pt-5 buying-buttons">
@@ -103,8 +103,12 @@
       </div>
     </div>
   </div>
-
   <div class="h3 text-center py-4">Compare with Similar Products</div>
+
+<div class="container">
+  <h5 class="alert alert-primary text-center ">Choose at least 1 product and 1 feature to create a table. </h5>
+
+</div>
 
   <div class="container">
     <div class="col ">
