Fix credit card information link

--- a/cart.html
+++ b/cart.html
@@ -170,7 +170,7 @@
             <use xlink:href="#info-fill" />
           </svg>
           <div href="tutorials.html">
-            Click <a href="tutorials.html">here</a> to learn more on how we keep your payment information safe.
+            Click <a href="https://www.youtube.com/watch?v=5laZecw4CP8">here</a> to learn more on how we keep your payment information safe.
           </div>
         </div>
         <div class="d-flex justify-content-center">
