--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <ul class="navbar-nav d-flex me-auto">
           <form class="d-flex" role="search">
-            <input class="search-box form-control me-2" type="search" placeholder="What do I want?" aria-label="Search">
+            <input class="search-box form-control text-center me-2" type="search" placeholder="What do I want?" aria-label="Search">
             <a class="btn btn-outline-secondary" onclick="return searchBehavior();">Search</a>
           </form>
         </ul>
@@ -47,7 +47,7 @@
 
         <li class="nav-item dropdown d-flex btn">
           <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            &#9776;
+           <big>&#9776;</big> 
           </a>
           <ul class="dropdown-menu dropdown-menu-end">
             <li><a class="dropdown-item" href="tutorials.html">Tutorials</a></li>
