--- a/searchResultsNotFound.html
+++ b/searchResultsNotFound.html
@@ -94,7 +94,7 @@
 
                 <li class="nav-item dropdown d-flex btn">
                     <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        &#9776;
+                        <big>&#9776;</big> 
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
                         <li><a class="dropdown-item" href="tutorials.html">Tutorials</a></li>
