--- a/aboutUs.html
+++ b/aboutUs.html
@@ -103,9 +103,9 @@
   <div class="container">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" style="font-size: 1.5rem;">Home</a></li>
-        <li class="nav-item"><a href="return.html" class="nav-link px-2 text-body-secondary" style="font-size: 1.5rem;">Return Policy</a></li>
-        <li class="nav-item"><a class="nav-link px-2 text-body-secondary" style="font-size: 1.5rem;">Customer Support: 403-221-2341</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+        <li class="nav-item"><a href="return.html" class="nav-link px-2 text-body-secondary">Return Policy</a></li>
+        <li class="nav-item"><a class="nav-link px-2 text-body-secondary">Customer Support: 403-221-2341</a></li>
       </ul>      
       <p class="text-center text-body-secondary">&copy; ElderCart Inc</p>
     </footer>
